--- a/b_chronicles.csproj
+++ b/b_chronicles.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+ <PublishSingleFile>true</PublishSingleFile> <!-- Single EXE -->
+<SelfContained>true</SelfContained> <!-- No need for .NET runtime -->
+<RuntimeIdentifier>win-x64</RuntimeIdentifier> <!-- Platform-specific -->
+  <PublishTrimmed>true</PublishTrimmed> <!-- Optional: Reduce size -->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <EnvironmentName>Development</EnvironmentName>
+    <EnvironmentName>Production</EnvironmentName>
   </PropertyGroup>
 
   <ItemGroup>
