--- a/b_chronicles.csproj
+++ b/b_chronicles.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
- <PublishSingleFile>true</PublishSingleFile> <!-- Single EXE -->
-<SelfContained>true</SelfContained> <!-- No need for .NET runtime -->
-<RuntimeIdentifier>win-x64</RuntimeIdentifier> <!-- Platform-specific -->
-  <PublishTrimmed>true</PublishTrimmed> <!-- Optional: Reduce size -->
+
+  <!-- Standalone Build Settings -->
+  <PublishSingleFile>true</PublishSingleFile>
+  <SelfContained>true</SelfContained>
+  <RuntimeIdentifier>win-x64</RuntimeIdentifier> <!-- or linux-x64/osx-x64 -->
+
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnvironmentName>Production</EnvironmentName>
@@ -23,6 +25,7 @@
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+
   </ItemGroup>
 
 </Project>
