--- a/b_chronicles.csproj
+++ b/b_chronicles.csproj
@@ -5,6 +5,7 @@
     <Version>1.1.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <ApplicationIcon>Assets\AppIcon.ico</ApplicationIcon>
     
     <!-- Developer Info -->
     <Company>DigiTalino</Company>
