--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -27,18 +27,19 @@ jobs:
       - name: Get Changelog from Git Log
         id: changelog
         run: |
-          # Get the previous tag (last released version)
+          # Try to get the last tag before the current commit
           $lastTag = git describe --tags --match "v*" --abbrev=0 HEAD~1 2>$null
 
           if (-not $lastTag) {
-              $lastTag = "v0.0.0"
-              Write-Output "No previous tag found. Using '$lastTag' as fallback."
+              Write-Output "No previous tag found. Showing all commits since the beginning of the project."
+              $changelog = git log --pretty=format:"* %s (%an)%n  - %H" HEAD
+          } else {
+              Write-Output "Found previous tag: $lastTag. Generating changelog..."
+              $changelog = git log --pretty=format:"* %s (%an)%n  - %H" $($lastTag)..HEAD
           }
 
-          # Get commit history between last tag and current commit
-          $changelog = git log --pretty=format:"* %s (%an)%n  - %H" $($lastTag)..HEAD
-
           echo "Changelog:`n$changelog" | Out-File -FilePath changelog.md -Encoding utf8
+
           echo "changelog<<EOF" >> $env:GITHUB_OUTPUT
           echo "$changelog" >> $env:GITHUB_OUTPUT
           echo "EOF" >> $env:GITHUB_OUTPUT
