--- a/b_chronicles.csproj
+++ b/b_chronicles.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
       <!-- Version Info -->
     <Version>1.1.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
     <ApplicationIcon>assets\cross.ico</ApplicationIcon>
+
+    <!-- Ensure informational version is generated -->
+    <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
+
     
     <!-- Developer Info -->
     <Company>DigiTalino</Company>
