--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -27,15 +27,15 @@ jobs:
       - name: Get Changelog from Git Log
         id: changelog
         run: |
-          # Try to get the last tag before the current commit
-          $lastTag = git describe --tags --match "v*" --abbrev=0 HEAD~1 2>$null
+          # Get the latest tag that points to an ancestor of HEAD
+          $lastTag = git describe --tags --match "v*" --abbrev=0 HEAD^{} 2>$null
 
           if (-not $lastTag) {
               Write-Output "No previous tag found. Showing all commits since the beginning of the project."
-              $changelog = git log --pretty=format:"* %s (%an)%n  - %H" HEAD
+              $changelog = git log --no-merges --pretty=format:"* [%ad] %s (%an)%n  - %H" --date=short $($lastTag)..HEAD
           } else {
               Write-Output "Found previous tag: $lastTag. Generating changelog..."
-              $changelog = git log --pretty=format:"* %s (%an)%n  - %H" $($lastTag)..HEAD
+              $changelog = git log --no-merges --pretty=format:"* [%ad] %s (%an)%n  - %H" --date=short $($lastTag)..HEAD
           }
 
           echo "Changelog:`n$changelog" | Out-File -FilePath changelog.md -Encoding utf8
