--- a/.github/workflows/build-test-windows.yml
+++ b/.github/workflows/build-test-windows.yml
@@ -1,4 +1,4 @@
-name: Build Test for Windows
+name: Build Test (Windows)
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    name: Build Project
+    name: Build Project - Windows
 
     steps:
       - name: Checkout Code
@@ -27,3 +27,10 @@ jobs:
 
       - name: Build Project
         run: dotnet build -c Release --no-restore
+
+      - name: Print OS Info
+        run: |
+          echo "Running on Windows"
+          systeminfo | findstr /C:"OS Name" /C:"OS Version"
+          echo "Dotnet runtime:"
+          dotnet --info
