--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -19,6 +19,7 @@ jobs:
     uses: ./.github/workflows/build-test-linux.yml
 
   build-and-publish:
+    needs: [test-windows, test-macos, test-linux]
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
